# graphius

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: Examples.ipynb
graphius/: visual.py
src/graphius/: graph.py
test/: test_graph.py
